backend/deployment/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: typesafe
  labels:
    name: typesafe
    environment: production
